# load-balancer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  config.ini  main.cpp
include/: BackendServersRepository.h  CLIArgsParser.h  ConfigParser.h  FrontendServer.h  HealthChecker.h  HealthCheckerFactory.h  LoadBalancer.h  Logger.h  ProxyConnection.h  ProxyConnectionFactory.h  RoundRobin.h  RoundRobinStrategy.h  SchedulingAlgorithm.h  SchedulingStrategy.h  SchedulingStrategyBuilder.h  SchedulingStrategyRepository.h  Server.h  ServersRepository.h  WeightedRoundRobin.h
src/: BackendServersRepository.cpp  CLIArgsParser.cpp  ConfigParser.cpp  FrontendServer.cpp  HealthChecker.cpp  HealthCheckerFactory.cpp  LoadBalancer.cpp  ProxyConnection.cpp  ProxyConnectionFactory.cpp  RoundRobin.cpp  RoundRobinStrategy.cpp  SchedulingStrategy.cpp  SchedulingStrategyBuilder.cpp  SchedulingStrategyRepository.cpp  Server.cpp  ServersRepository.cpp  WeightedRoundRobin.cpp
